@@ -21,6 +21,8 @@
  - Fix: Sitters cannot start colonies, stations.
  - Fix: The Gift's hold size needs specifying.
  - Fix: Essentia code redeeming no longer gives more than one digit after decimal point.
+ - Mod: Stations sort to bottom of list for TM and SST
+ - Mod: Excavs show in arch min in order of distance
 
 3.0911:
  - Add: Reduce opacity for less-well-controlled stars.
